force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Reason_for_extension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_extension__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>Reason the Tender was extended</description>
    <label>Reason for Extension</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting TAM/Contract/SE response</fullName>
            </value>
            <value>
                <fullName>Internal approval/process</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer/Third Party response</fullName>
            </value>
            <value>
                <fullName>Too short deadline</fullName>
            </value>
            <value>
                <fullName>Modification of tender specs</fullName>
            </value>
            <value>
                <fullName>Missing data</fullName>
            </value>
            <value>
                <fullName>T&amp;Cs negotiations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>