force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Reason_for_Loss__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Loss__c</fullName>
    <description>[Updated] DCP-43593</description>
    <label>Reason for Loss</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tenders_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Late Submission / Missed Deadline</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Ts &amp; Cs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Technical Specifications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>