force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Reason_for_Missing_24hr_Before_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Missing_24hr_Before_Deadline__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>Reason why the Tender was not ready 24hrs before the Tender Due Date</description>
    <label>Reason for Missing 24hr Before Deadline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for quote approvals</fullName>
            </value>
            <value>
                <fullName>Delay in receiving customers answers to clarification Questions</fullName>
            </value>
            <value>
                <fullName>Awaiting contracts approval for red flags</fullName>
            </value>
            <value>
                <fullName>Awaiting documents from Contracts e.g. cover letter</fullName>
            </value>
            <value>
                <fullName>Awaiting for final approval/final review of the submission docs</fullName>
            </value>
            <value>
                <fullName>Sales late in providing all answers/technical info</fullName>
            </value>
            <value>
                <fullName>Waiting for signatures</fullName>
            </value>
            <value>
                <fullName>Lack of my time due to submitting other tenders/working on other urgent things</fullName>
            </value>
            <value>
                <fullName>Long internal process (RR)</fullName>
            </value>
            <value>
                <fullName>Waiting for approval from finance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>