force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Reason_for_Non_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Non_Compliance__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>Provide reason why required fields are not completed</description>
    <label>Reason for Non-Compliance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>