force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Regenerate__c.field-meta.xml
<CustomField>
    <fullName>Regenerate__c</fullName>
    <description>Conditionally show the &quot;Regenerate&quot; custom button</description>
    <formula>IF (
AND($Profile.Name != $Label.SalesRepProfileName,
OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;)),
OR(AND(Number_Of_Agreement_Line_Items__c &gt; 0,Validation_Status__c = &quot;Validate Completed&quot;),
AND(ISPICKVAL(Line_Items_Required_Optional__c, &quot;Optional&quot;),OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Approved&quot;),ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Not Submitted&quot;))
),AND(ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Approved&quot;),RecordType.DeveloperName = $Label.AgreementRecordTypeOpenOffer))), 
IF(
OR(
$User.UIThemeDisplayed == &apos;Theme4d&apos;, 
$User.UIThemeDisplayed == &apos;Theme4t&apos;,
 $User.UIThemeDisplayed == &apos;Theme4u&apos;
 ), 
 HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;), 
 HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;)
 ),
 NULL
 )</formula>
    <inlineHelpText>Regenerate the agreement</inlineHelpText>
    <label>Regenerate</label>
    <type>Text</type>
</CustomField>