force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Related_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Related_Agreement__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to  an already existing agreement between Illumina and Customer.</description>
    <label>Related Agreement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus__APTS_Agreement__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Tender</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Agreements (Related Agreement)</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>