force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Report_Attestation_Certification__c.field-meta.xml
<CustomField>
    <fullName>Report_Attestation_Certification__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>There is a Reporting/Attestation/Certification Requirement</description>
    <label>Report/Attestation/Certification</label>
    <type>Checkbox</type>
</CustomField>