force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Right_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Right_to_Invoice__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Right to Invoice</description>
    <label>Right to Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Acceptance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>