force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Rights_of_Use_Changes_Reference__c.field-meta.xml
<CustomField>
    <fullName>Rights_of_Use_Changes_Reference__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Rights of Use Changes Agreement Reference</description>
    <label>Rights of Use Changes Reference</label>
    <length>31</length>
    <type>Text</type>
</CustomField>