force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Field to store Sales Org</description>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Org</valueSetName>
    </valueSet>
</CustomField>