force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Secondary_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_ID__c</fullName>
    <inlineHelpText>ILS LIMS System ID if different than customer ERP</inlineHelpText>
    <label>Secondary Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>