force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Secondary_Escalation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Escalation_Contact__c</fullName>
    <description>Secondary Escalation Contact</description>
    <label>Secondary Escalation Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>