force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Secondary_Escalation_Contact_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Escalation_Contact_e_mail__c</fullName>
    <description>Secondary Escalation Contact e-mail</description>
    <label>Secondary Escalation Contact e-mail</label>
    <length>40</length>
    <type>Text</type>
</CustomField>