force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Send_For_Review__c.field-meta.xml
<CustomField>
    <fullName>Send_For_Review__c</fullName>
    <description>Button to Send the Agreement for Review</description>
    <formula>IF(
AND( 
OR(
ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;),
ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;)
 ),
 OR(
ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Not Submitted&quot;),
ISPICKVAL(Apttus_Approval__Approval_Status__c,&quot;Approved&quot;),
RecordType.Name == &apos;Tender&apos;
 ),
NOT ( Validation_Status__c = $Label.AgreementValidationStatusActivateInProgress ),
$Profile.Name != $Label.SalesRepProfileName
 )
 ,
IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;), HYPERLINK(&quot;/apex/Apttus__LightningSendEmailWizard?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;)),
 NULL
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send For Review</label>
    <type>Text</type>
</CustomField>