force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Send_GCP_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_GCP_Notification__c</fullName>
    <description>Send GCP Notification</description>
    <defaultValue>false</defaultValue>
    <label>Send GCP Notification</label>
    <type>Checkbox</type>
</CustomField>