force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Sub_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Sub_Distributor__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>The Sub-Distributor used by Illumina Channel Partner to respond to a Tender.</description>
    <label>Sub Distributor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>