force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Submission_Response_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Response_Deadline__c</fullName>
    <description>Field to store the deadline for response submission</description>
    <label>Submission / Response Deadline</label>
    <type>DateTime</type>
</CustomField>