force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Submit_Request__c.field-meta.xml
<CustomField>
    <fullName>Submit_Request__c</fullName>
    <description>Button to Submit Request</description>
    <formula>IF(
AND(
ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;),
Number_Of_Agreement_Line_Items__c &gt;= 1,
OR(
ISPICKVAL(Apttus__Status__c,&quot;Request&quot;),
ISPICKVAL(Apttus__Status__c,&quot;In Amendment&quot;),
ISPICKVAL(Apttus__Status__c,&quot;In Renewal&quot;),
ISPICKVAL(Apttus__Status__c,&quot;&quot;)
)
),
HYPERLINK(&quot;/apex/Apttus__AgreementSubmitRequest?id=&quot; &amp;Id,IMAGE(&quot;/resource/Apttus__Button_SubmitRequest&quot;, &quot;Submit Request&quot;), &quot;_self&quot;),NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit Request</label>
    <type>Text</type>
</CustomField>