force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field gets populated from created by of approval request</description>
    <label>Submitted by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>