force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Supplier_Audits_Customer_POC__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Audits_Customer_POC__c</fullName>
    <description>Supplier Audits Customer POC</description>
    <label>Supplier Audits Customer POC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>