force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Supply_Continuity_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Supply_Continuity_Guarantee__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Check if there Supply Continuity Guarantee</description>
    <label>Supply Continuity Guarantee</label>
    <type>Checkbox</type>
</CustomField>