force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/TAMs_Deadline_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>TAMs_Deadline_to_Respond__c</fullName>
    <description>Field to store TAM's Deadline to Respond</description>
    <label>TAM&apos;s Deadline to Respond</label>
    <type>DateTime</type>
</CustomField>