force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Template_Product_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Template_Product_Discount_Percent__c</fullName>
    <description>Counts number of agreement line items containing discount with discount type percent.</description>
    <label>Template Product Discount Percent</label>
    <summaryFilterItems>
        <field>Apttus__AgreementLineItem__c.Material_Number__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Apttus__AgreementLineItem__c.Discount__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Apttus__AgreementLineItem__c.Discontinued__c</field>
        <operation>equals</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Apttus__AgreementLineItem__c.Discount_Type__c</field>
        <operation>equals</operation>
        <value>% Discount</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus__AgreementLineItem__c.Apttus__AgreementId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>