force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Template_Start_Date_Flag__c.field-meta.xml
<CustomField>
    <fullName>Template_Start_Date_Flag__c</fullName>
    <description>Formula to check if the start date is greater than Today</description>
    <formula>If (
				Apttus__Contract_Start_Date__c &gt;=  Current_Date__c,
				true,
				false
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Start Date Flag</label>
    <type>Checkbox</type>
</CustomField>