force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <description>Field to store Template Type</description>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research Use</fullName>
            </value>
            <value>
                <fullName>IVD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>