force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Tender_Description__c.field-meta.xml
<CustomField>
    <fullName>Tender_Description__c</fullName>
    <description>Field to store the description of Tender</description>
    <label>Tender Description</label>
    <length>32678</length>
    <type>LongTextArea</type>
</CustomField>