force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Tender_extended__c.field-meta.xml
<CustomField>
    <fullName>Tender_extended__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <defaultValue>false</defaultValue>
    <description>Was the Tender extended?</description>
    <label>Tender Extended</label>
    <type>Checkbox</type>
</CustomField>