force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Tender_submitted_date__c.field-meta.xml
<CustomField>
    <fullName>Tender_submitted_date__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>Date the Tender was submitted.</description>
    <label>Tender Submitted Date</label>
    <type>DateTime</type>
</CustomField>