force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Tenders_Status__c.field-meta.xml
<CustomField>
    <fullName>Tenders_Status__c</fullName>
    <description>Field to store Tender status</description>
    <label>Tenders Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Pending TAM decision</fullName>
            </value>
            <value>
                <fullName>Contracts Decline to Pursue/ TAM Declines to Pursue</fullName>
            </value>
            <value>
                <fullName>Pre-submission</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pre-Award</fullName>
            </value>
            <value>
                <fullName>Won Pending PO/Contract</fullName>
            </value>
            <value>
                <fullName>In Effect/Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed Abandoned</fullName>
            </value>
            <value>
                <fullName>TAM Declines to Pursue</fullName>
            </value>
            <value>
                <fullName>Contracts Decline to Pursue</fullName>
            </value>
            <value>
                <fullName>Pre Submission</fullName>
            </value>
            <value>
                <fullName>Post Submission</fullName>
            </value>
            <value>
                <fullName>Post Award Won – Pending PO/Contract</fullName>
            </value>
            <value>
                <fullName>Post Award Won – Received PO/Signed Contract</fullName>
            </value>
            <value>
                <fullName>Post Award Lost</fullName>
            </value>
            <value>
                <fullName>Tender Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>