force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <description>Territory/Region for Quality/Parternship Agreements.</description>
    <inlineHelpText>Select all the apply of where products or services are intended to be sold or distributed</inlineHelpText>
    <label>Territory/Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMEA - Asia-Pacific, Middle East, Africa</fullName>
            </value>
            <value>
                <fullName>APJ - Asia and the Pacific Group</fullName>
                <isActive>False</isActive>
                <label>APJ - Asia and the Pacific Group</label>
            </value>
            <value>
                <fullName>GC - Greater China</fullName>
            </value>
            <value>
                <fullName>AMR - Americas</fullName>
            </value>
            <value>
                <fullName>EUR - Europe</fullName>
            </value>
            <value>
                <fullName>EMEA - Europe, Middle East, and Africa</fullName>
                <isActive>False</isActive>
                <label>EMEA - Europe, Middle East, and Africa</label>
            </value>
            <value>
                <fullName>Global - All Regions</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>