force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Total_Consumable_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Consumable_Spend__c</fullName>
    <description>Total consumable spend which is equal to sum of Actual consumable spend and estimated consumable spend</description>
    <formula>Actual_Consumable_Spend__c  +  Estimated_Consumable_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Actual Consumable Spend and Estimated Consumable Spend</inlineHelpText>
    <label>Total Consumable Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>