force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Total_contract_length_with_extension__c.field-meta.xml
<CustomField>
    <fullName>Total_contract_length_with_extension__c</fullName>
    <businessOwnerUser>gpikes@illumina.com</businessOwnerUser>
    <description>Length of contract including extension in months</description>
    <inlineHelpText>Length of contract including extension in months</inlineHelpText>
    <label>Total Contract Length With Extension</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>