force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Ultimate_Consignee_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee_ERP_Number__c</fullName>
    <description>Field to store the Consignee ERP Number</description>
    <formula>Ultimate_Consignee__r.ERP_Customer_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Consignee ERP Number</label>
    <type>Text</type>
</CustomField>