force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Use_Rights__c.field-meta.xml
<CustomField>
    <fullName>Use_Rights__c</fullName>
    <description>Use Rights</description>
    <label>Use Rights</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Sublicense</fullName>
            </value>
            <value>
                <fullName>IP in</fullName>
            </value>
            <value>
                <fullName>IP out</fullName>
            </value>
            <value>
                <fullName>Application IP</fullName>
            </value>
            <value>
                <fullName>Core IP</fullName>
            </value>
            <value>
                <fullName>Other IP</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>