force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <description>Field to store Validation status</description>
    <inlineHelpText>This field states the current status of integrations with SAP(Validate, Activate).</inlineHelpText>
    <label>Validation Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>