force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Validity_Date__c</fullName>
    <description>Field to store the Validity Date</description>
    <label>Validity Date</label>
    <type>DateTime</type>
</CustomField>