force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/Value_Added_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Value_Added_Distributor__c</fullName>
    <description>Field to store the Agreement's added distributor</description>
    <defaultValue>false</defaultValue>
    <label>Value Added Distributor</label>
    <type>Checkbox</type>
</CustomField>