force-app/main/default/objects/Apttus__APTS_Agreement__c/fields/X3rd_Party_Products_Warranty_Information__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Products_Warranty_Information__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Add what the third party product is</description>
    <label>3rd Party Products Warranty Information</label>
    <length>39</length>
    <type>Text</type>
</CustomField>