force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Custom_Product_Quote.recordType-meta.xml
<RecordType>
    <fullName>Custom_Product_Quote</fullName>
    <active>true</active>
    <label>Custom Product Quote</label>
</RecordType>