force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Illumina_Lab_Services.recordType-meta.xml
<RecordType>
    <fullName>Illumina_Lab_Services</fullName>
    <active>true</active>
    <label>Illumina Lab Services</label>
</RecordType>