force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Master_Customer_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Master_Customer_Agreement</fullName>
    <active>true</active>
    <label>Master Customer Agreement</label>
</RecordType>