force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Master_Service_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Master_Service_Agreement</fullName>
    <active>true</active>
    <label>Master Service Agreement</label>
</RecordType>