force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Negotiated_Terms_and_Conditions.recordType-meta.xml
<RecordType>
    <fullName>Negotiated_Terms_and_Conditions</fullName>
    <active>true</active>
    <label>Negotiated Terms and Conditions</label>
</RecordType>