force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Open_Offer_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Open_Offer_Agreement</fullName>
    <active>true</active>
    <label>Open Offer Agreement</label>
</RecordType>