force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Partnership_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Partnership_Agreement</fullName>
    <active>true</active>
    <label>Partnership Agreement</label>
</RecordType>