force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Quality_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Quality_Agreement</fullName>
    <active>true</active>
    <label>Quality Agreement</label>
</RecordType>