force-app/main/default/objects/Apttus__APTS_Agreement__c/recordTypes/Special_Programs.recordType-meta.xml
<RecordType>
    <fullName>Special_Programs</fullName>
    <active>true</active>
    <description>This agreement type should be used for Special Programs such as Reagent Rentals and IHPP.</description>
    <label>Special Programs</label>
</RecordType>